<resources>
    <string name="app_name">Staff Services</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="schedules">Schedules</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="id_number">ID Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="sem">First Semester 2020/2021</string>
    <string name="messages">Messages</string>
    <string name="academic_services">Academic Services</string>
    <string name="no_lectures_today">No Lectures Today</string>
    <string name="apologize">Apologize</string>
    <string name="change_date">Change Date</string>
    <string name="change_hill">Change Hill</string>
    <string name="attendance_sheet">Attendance Sheet</string>
    <string name="administrative_services">Administrative Services</string>
    <string name="settings">Settings</string>
    <string name="view_staff">View Staff</string>
    <string name="logout">Logout</string>
    <string name="agenda">Agenda</string>
    <string name="reports">Reports</string>
    <string name="midterm_observation">Midterm Observation</string>
    <string name="final_observation">Final Observation</string>
    <string name="basic_info">Basic Info</string>
    <string name="job_info">Job Info</string>
    <string name="cancel_notifications">Notifications</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="BeginningOfTheSemester">Beginning of the semester:</string>
    <string name="EndOfTheSemester">end of the semester</string>
    <string name="MidtermExamsStart">Midterm exams start:</string>
    <string name="MidtermExamsEnd">Midterm exams end:</string>
    <string name="FinalExamsStart">Final exams start:</string>
    <string name="FinalExamsEnd">Final exams end:</string>
    <string name="BeginningOfMidtermEntry">Beginning midterm entry:</string>
    <string name="EndOfMidtermEntry">End of midterm entry:</string>
    <string name="BeginningOfFinalEntry">Beginning of final entry:</string>
    <string name="EndOfFinalEntry">End of final entry:</string>
    <string name="endOfDraw">end of draw:</string>
    <string name="subject_name">Subject name:</string>
    <string name="subject_id">Subject id:</string>
    <string name="DivisionId">Division id:</string>
    <string name="gender">gender:</string>
    <string name="Students_number">number of students:</string>
    <string name="NoOfficeHours">There are no office hours</string>
    <string name="NoSystamicSubjects">There are no systemic subjects</string>
    <string name="NoIncompleteSubjects">There are no incomplete subjects</string>
    <string name="notificationsAndMessages">Notifications and messages</string>
    <string name="english">English language</string>
    <string name="arabic">Arabic language</string>
    <string name="PasswordMustContain">Password must contain lowercase and uppercase letters, numbers and symbols</string>
    <string name="currentPassword">Current password:</string>
    <string name="confirmNewPassword">Confirm new password:</string>
    <string name="newPassword">New password:</string>
    
    
    <string name="court">Court</string>
    <string name="university">University</string>
    <string name="positions">Positions</string>
    <string name="job_name_and_place">Job Name And Place</string>
    <string name="job_name">Job Name:</string>
    <string name="job_place">Job Place:</string>
    <string name="course">Course</string>
    <string name="date">Date</string>
    <string name="period">Period</string>
    <string name="hill">Hill</string>
    <string name="name">Name:</string>
    <string name="faculty">Faculty:</string>
    <string name="department">Department:</string>
    <string name="email">Email:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="search">Search...</string>
    <string name="citizenship">Citizenship</string>
    <string name="name_in_english">Name in English</string>
    <string name="name_and_identification">Name And Identification</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="street">Street</string>
    <string name="contact">Contact</string>
    <string name="university_email">University Email</string>
    <string name="personal_email">Personal Email</string>
    <string name="save_edits">Save Edits</string>
    <string name="changeLectureTime">Change lecture time</string>
    <string name="OldTime">Old time:</string>
    <string name="NewTime">New time:</string>
    <string name="changeLectureHall">Change lecture hall</string>
    <string name="OldHall">Old hall:</string>
    <string name="NewHall">New hall:</string>
    <string name="Enterhallname">Enter hall name</string>
    <string name="course_name">Course name:</string>
    <string name="course_no">Course number:</string>
    <string name="class_no">Class number:</string>
    <string name="date_">Date:</string>
    <string name="addMeet">Add meet</string>
    <string name="student_name">Student name</string>
    <string name="attend">Attend</string>


    <string name="AlaqsaUniversity">Alaqsa University</string>
    //Fragments
    <string name="HomePage">Home page</string>
    <string name="SchedulesPage">Schedules Page</string>
    <string name="Attendance">Attendance</string>
    <string name="EditBasicInfo">Edit basic info</string>
    <string name="NotificationPage">Notifications and messages</string>
    <string name="StaffInfo">Staff info</string>
    <string name="college">College:</string>

    <array name="testHistory">
            <item>2020/02/02</item>
            <item>2020/02/02</item>
            <item>2020/02/02</item>
        </array>



    <array name="AgendaType">
        <item>morning system</item>
        <item>evening system</item>
        <item>Community College</item>
        <item>Master\'s System</item>
    </array>


    <array name="ReportsType">
        <item>Attendance and absence detection</item>
        <item>Attendance and absence detection</item>
        <item>Attendance and absence detection</item>
    </array>
</resources>
