<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingTop="@dimen/_8sdp"
    tools:context=".fragment.FinalObservationFragment">

    <LinearLayout
        android:id="@+id/fobsLinearLayoutSem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/observation_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fobsTextViewCourse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/course"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/fobsTextViewDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/fobsTextViewPeriod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_4sdp"
            android:text="@string/period"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/fobsTextViewHill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/hill"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/fobsCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fobsLinearLayoutSem">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fobsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>