<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".fragment.JobInfoFragment">

    <LinearLayout
        android:id="@+id/jobLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/homeTextViewApologize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/text_view_background"
            android:gravity="center"
            android:lines="1"
            android:text="@string/court"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/cairo_bold"
            />

        <TextView
            android:id="@+id/homeTextViewChDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/text_view_background_empty"
            android:gravity="center"
            android:lines="1"
            android:text="@string/university"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/cairo_bold"
            />

        <TextView
            android:id="@+id/homeTextViewChHall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/text_view_background_empty"
            android:gravity="center"
            android:lines="1"
            android:text="@string/positions"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/cairo_bold"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobLinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_12sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jobTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_name_and_place"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:fontFamily="@font/cairo_bold"
                />

            <TextView
                android:id="@+id/jobTextViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/job_name"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/primary"
                android:fontFamily="@font/cairo_semi_bold"
                />

            <TextView
                android:id="@+id/jobTextViewNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Lecturer"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/cairo_regular"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/jobTextViewPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/job_place"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/primary"
                android:fontFamily="@font/cairo_semi_bold"
                />

            <TextView
                android:id="@+id/jobTextViewPlaceValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="AlAqsa University"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/cairo_regular"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>