<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".fragment.EditBasicInfoFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_16sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/editBasicInfoCardViewNameAndIdent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/editBasicInfoTextViewNameAndIdent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_and_identification"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewNameEn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/name_in_english"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextNameEnV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/editBasicInfoCardViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:visibility="visible"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBasicInfoCardViewNameAndIdent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/editBasicInfoTextViewAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewProvince"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/province"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextProvinceV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/city"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextCityV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewNeighborhood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/neighborhood"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextNeighV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/street"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextStreetV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/editBasicInfoCardViewContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:visibility="visible"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBasicInfoCardViewAddress">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/editBasicInfoTextViewContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewPEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/personal_email"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextPEmailV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/editBasicInfoTextViewMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/mobile_no"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:id="@+id/editBasicInfoEditTextMobileV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/text_view_background_empty"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/editBasicInfoButtonSave"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/text_view_background"
                android:text="@string/save_edits"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBasicInfoCardViewContact" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
